--- a/styles/global.css
+++ b/styles/global.css
@@ -4,7 +4,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Montserrat", serif;
+  font-family: Montserrat;
   user-select: none;
 }
 
@@ -103,7 +103,6 @@ a {
   transition: all 0.3s ease-in-out;
 
   .video-content__container {
-    background-color: var(--text-white);
     border-radius: 8px;
     max-height: 700px;
     min-width: 500px;
@@ -112,7 +111,6 @@ a {
 
     .video-container {
       height: 100%;
-      border: 1px solid #eaeaea;
       video {
         width: 100%;
         height: 500px;
@@ -120,7 +118,7 @@ a {
     }
     div:nth-child(2) {
       display: flex;
-      justify-content: end;
+      justify-content: center;
       button {
         outline: none;
         background-color: var(--hightlight-color);
@@ -796,7 +794,7 @@ a {
     .about-block {
       position: relative;
       max-width: 371px;
-      border: 3px solid var(--hightlight-color);
+      border: 2px solid var(--hightlight-color);
       height: 96px;
       border-radius: 4px;
       text-align: center;
@@ -811,6 +809,7 @@ a {
         transition: all 0.3s ease-in;
         visibility: hidden;
         opacity: 0;
+        margin-top: 1px;
       }
 
       &:hover {
@@ -861,12 +860,36 @@ a {
         justify-content: center;
         align-items: center;
         gap: 8px;
+        color: #333333;
         span,
         p {
           text-align: center;
           font-size: 18px;
-          font-weight: 800;
+          font-weight: 700;
           line-height: 28px;
+        }
+
+        .placement-line {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          gap: 8px;
+          margin-top: 10px;
+
+          img {
+            visibility: hidden;
+            opacity: 0;
+            transition: all 0.3s ease-in;
+          }
+        }
+      }
+
+      &:hover {
+        .placement-line {
+          img {
+            visibility: visible;
+            opacity: 1;
+          }
         }
       }
     }
@@ -991,10 +1014,12 @@ a {
 
     .footer-overlay__right {
       height: 648px;
-      width: 60%;
+      width: 45%;
       background-image: url("../assets/footer-image.png");
-      background-size: 100% 649px;
+      background-size: 100% 100%;
       background-repeat: no-repeat;
+      background-position: right; /* Add this line to anchor to right */
+      margin-left: auto; /* Add this line to push the element to the right */
     }
   }
   .footer-banner__logo {
